Fix spacing between header and main blocks

--- a/easyworkout.client/src/styles.css
+++ b/easyworkout.client/src/styles.css
@@ -12,7 +12,7 @@ app-root {
 }
 
 main {
-    padding: 0 30px 0 30px;
+    padding: 15px 30px 0 30px;
 }
 
 footer {
